# LRCDownloader

./: README.md  pyproject.toml
.github/workflows/: pr_check.yml  ruff-format.yml
src/lrcdownloader/: __init__.py  __main__.py  lrclib.py  utils.py
