[project]
name = "lrcdownloader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "t.m", email = "takashi.orion.999.428@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
lint.cmd = "ruff check ."
format.cmd = "ruff format ."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lrcdownloader"]